[package]
name = "lock-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#logic-lock = { git = "https://github.com/nappa85/logic-lock.git" }
sea-orm = { git = "https://github.com/nappa85/sea-orm.git", branch = "fix_metrics_0.9.x", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
