[package]
name = "otlp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
hyper = "0.14.23"
once_cell = "1.16.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tls", "tls-roots", "trace", "tonic", "metrics"] }
rand = "0.8.5"
tonic = "0.6.2"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
